--- a/roadmap.html
+++ b/roadmap.html
@@ -17,7 +17,7 @@
 <p>Язык программирования<a href="https://www.python.org/">Python</a> т.к. это пожалуй 
 самый лучший язык для начинающих</p> #асинхронн, ООп и тд
 
-<p>Различные<a href="https://docs.python.org/3/tutorial/modules.html"> модули</a> для питона</p> # игровые, тг боты, и тд
+<p>Различные<a href="https://docs.python.org/3/tutorial/modules.html"> модули</a> для питона</p>  <!--игровые, тг боты, и тд -->
 
 <p><a href="https://vk.com/al_feed.php"> Фреймворки</a></p>
 
